# Meridian-LP-Adjusted

./: .env.example  .gitignore  README.md  _tmp_req24.ps1  _tmp_test_sources_base_writer.ps1  agent.js  config.js  decision-ledger.js  ecosystem.config.cjs  execution-modes.js  hivemind.js  index.js  my-patch.diff  package-lock.json  package.json  scratch-verify.js  screening-scales.js  setup.js  token-risk.js  user-config.example.json
defi_autonomy/: KILL_SWITCH.md  README.md  __init__.py  agent_bridge.py  broadcast_executor.py  coordinator.py  ecosystem.defi.cjs  external_data_ingestion.py  kanban_planner.py  learning_memory.py  manifesto.md  outcome_recorder.py  policy_engine.py  position_lifecycle.py  provenance.py  pyproject.toml  requirements-dry.txt  requirements-live.txt  requirements.txt  risk_scorer.py  run_dry_cycle.py  subagent_registry.py  telegram_guardian.py  transaction_builder.py  transaction_envelope.py  tx_simulator.py  wallet_executor.py
defi_autonomy/data/: cycle_report.json  cycle_report.jsonl  execution_ledger.jsonl  normalized_yield_candidates.json  positions.json  raw_snapshots.json  risk_policy.json  source_allowlist.json  source_health.json
defi_autonomy/deploy/: rsync_exclude.txt
defi_autonomy/schemas/: normalized_candidate.py
defi_autonomy/scripts/: deploy_package.ps1  deploy_to_aws.ps1  healthcheck.sh
defi_autonomy/sources/: base.py  defillama_adapter.py  meteora_adapter.py  stablecoin_benchmark_adapter.py  xstocks_adapter.py
defi_autonomy/tests/: conftest.py
defi_autonomy/tests/integration/: __init__.py  test_full_cycle.py
(+52 files in other folders)
